test/classes/initializers/errors/lhsConsRhsInit.good
lhsConsRhsInit.chpl:18: error: type mismatch in assignment from hasInit to hasConstruct
